--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.5.4",
@@ -43,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
